fix repository và service